# fresh-waifu-wallpapers

./: README.md  index.html  package.json
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache_management.rs  configuration_manager.rs  main.rs  notifications.rs  refresh_wallpaper.rs  window_management.rs
src/views/: AppConfigurationView.vue
