[package]
name = "fresh-waifu-wallpapers"
version = "0.8.0"
description = "Handy tool to fetch Waifu wallpapers for you."
authors = ["Wind-Explorer"]
license = ""
repository = "https://github.com/wind-explorer/fresh-waifu-wallpapers"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "path-all", "window-hide", "notification-all", "protocol-asset", "fs-all", "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.18", features = ["json"] }
wallpaper = "3.2.0"
image = "0.24.6"
nekosbest = "0.19.0"
opener = {version = "0.6.1", features = ["reveal"] }
toml = "0.7.6"

[package.metadata.tauri]
embed_paths = ["../src/assets/media/*"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
